app/assets/stylesheets/less/_page.less
/* ... */
// -- pull request
.pull-request-wrap {
    position:relative;
    display: block;
    margin-bottom:20px;
    min-height:55px;

    .field-title {
        display:block;
        font-weight: bold;
    }

    .arrow {
        position:absolute;
        left:50%; top:20px;
        margin-left:-16px;
        text-align:center;
        color: @yobi-gray;
        font-size: 32px;
    }
}

.request-summary {
    float: right;
    width: 100%;
    th {
        text-align: left;
    }
    td {
        text-align: right;
    }
}

.mass-update-wrap {
    &.affix {
        top:0;
        padding:15px 0;
        border-bottom:1px solid rgba(0, 0, 0, 0.1);
        width:100%;
        background: #fff;
    }
}

.mass-update-form {
   position:relative;
   -webkit-transition:padding 0.5s;

   .mass-update-list {
        max-height: 350px;
        overflow-y: auto;
   }
}
.fork-wrap {
    .project-from {
        display:inline-block;
        width:300px;
        vertical-align:middle;
        text-align:center;

        .title { color:@secondary; }
    }

    .arrow {
        display:inline-block;
        vertical-align:middle;
        padding:0 40px;
    }

    .project-to {
        display:inline-block;
        width:550px;
        vertical-align:middle;

        .project-name-wrap {
            display:block;

            .title { color:@primary; }
            .owner {
                display:inline-block;
                font-size:14px;
                padding-top:5px; margin-right:10px;
            }
            .project-name {
                display:inline-block;
                vertical-align:top;
                input { font-size:14px; }
                .help-block { color:#999; }
            }
        }

        .project-public {
            line-height:30px;
        }
    }
}

// -- keymap
.keymap-help {
    padding:20px;
    line-height:30px;
    white-space:nowrap;

    .ybtn {
        min-width:20px;
        margin-right:3px;
    }
    .actrow {
        text-align:center;
        margin-top:30px;
    }
}

// -- Help Messages
.help-messages {
    margin-left: 10px;

    p:not(.lead) {
        font-size: 120%;
    }
}

.input-mini-min {
  width: 30px;
  border: none;
  top: 4px;
  position: relative;
  background-color: #F7F7F7;
  text-align: right;
  border: none;
}

.dimmedColor {
  color: #eee;
}

.no-gradient{
  background-image: none;
}

.btn-flat{
    .active {
        color: #fff;
        background-color: #979797;
        text-shadow: none;
        .box-shadow(none);
    }
    .dirty { background-color: @secondary; }
    .btn {
        padding-top: 2px;
        padding-bottom: 2px;
    }
}

.project-category {
  margin-top: 10px;
  border: 2px solid #000;
  border-radius: 5px;
  border-top: 5px solid #000;
  .categotry-header {
    text-shadow: none;
    background-color: #000;
    color: #FFF;
    padding-bottom: 7px;
    font-size: 12px;
  }
  li {
   a {
    font-size: 13px;
    padding-top: 7px;
    padding-bottom: 7px;
   }
  }
}

/** code comments **/
.diff-body tr.comments {
    display:none;
}

.diff-body.show-comments tr.comments {
    display: table-row;
}
.diff-body tr.comment-form {
    td {
        position:relative;
        padding:0; padding-left:5px;
        border:1px solid #ccc;
        border-width:1px 0;

        .review-form {
            position:static;
            max-width: 860px;
            border:0;
            .border-radius(0);
        }
    }
}


/*div#mode-select { text-align:right; }*/
.pullreq-info {clear:both; padding-bottom:10px; margin-bottom:10px; }

.go-zen {
    position: absolute;
    right: 8px;
    margin-top: 14px;
    z-index:999;
}

.textarea-box {
    padding: 0;
    margin: 0;
    display: block;
    padding-right: 14px;
    position:relative;

    textarea {
        .border-radius(0 0 3px 3px);
        width: 100%;
        resize:vertical !important;
        font-size: 12px;
    }
}
/* ... */

